# nlp-api

./: .env  .gitignore  Cargo.toml  README.md  run.bat  run.ps1
postman/: NLP API.postman_collection.json
src/: main.rs  nlp.rs  summarization_factory.rs  transport_structs.rs
